--- a/stylesheets.css
+++ b/stylesheets.css
@@ -29,6 +29,15 @@ body {
     font-size: 12px;
     color: gray;
 }
+h1 {
+    margin: 0;
+}
+.counts{
+    font-size: 12px;
+    margin: 5px 0 10px 0;
+    color: rgb(40,40,40);
+    font-family: monospace;
+}
 .list {
 	line-height: 1.6;
     border: 1px solid #565252;
